Cleanups, remove incorrect comments and docs, unused variables.  Fix converstion of AppdefEntityIDs to use the String constructor rather than parse the key in the portlet.